cluster/apps/cluster-manage/kubesphere/console-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ks-console
  namespace: kubesphere-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  rules:
    - host: "kubesphere.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ks-console
                port:
                  name: nginx
  tls:
    - hosts:
        - "kubesphere.${SECRET_DOMAIN}"
      secretName: kubesphere-tls
